// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomColorInput Snapshots renders as expected 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  position: relative;
}

.emotion-0 {
  margin: 0;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 36px;
  margin-right: 8px;
}

.emotion-0:focus,
.emotion-0:active {
  border-color: transparent;
  outline: none;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-1 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0;
  bottom: 0;
  left: 8px;
  margin: auto;
  border: 1px solid #b9c0c7;
  pointer-events: none;
  border-radius: 2px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 40px;
  height: 40px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-3 span .wd-icon-fill,
.emotion-3 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-3:focus span .wd-icon-fill,
.emotion-3:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-3:hover:focus {
  background-color: #dfe2e6;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ced3d9;
}

.emotion-3:hover {
  background-color: #dfe2e6;
}

.emotion-3:hover span .wd-icon-fill,
.emotion-3:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-3:disabled span .wd-icon-fill,
.emotion-3:active:disabled span .wd-icon-fill,
.emotion-3:focus:disabled span .wd-icon-fill,
.emotion-3:hover:disabled span .wd-icon-fill,
.emotion-3:disabled span .wd-icon-accent,
.emotion-3:active:disabled span .wd-icon-accent,
.emotion-3:focus:disabled span .wd-icon-accent,
.emotion-3:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-4"
>
  <input
    className="emotion-0"
    defaultValue=""
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="eg. #FFFFFF"
    type="text"
  />
  <div
    className="emotion-1"
    role="button"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <button
    className="emotion-3"
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M8.657 15.85l10.26-10.26a.49.49 0 0 1 .703.01l.7.7a.495.495 0 0 1 .01.704L9.005 18.33a.488.488 0 0 1-.692.002L8.3 18.32l-4.946-4.946a.495.495 0 0 1 .003-.711l.7-.7a.507.507 0 0 1 .711-.004l3.889 3.89z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</div>
`;

exports[`CustomColorInput Snapshots renders with a selected color 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  position: relative;
}

.emotion-0 {
  margin: 0;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 36px;
  margin-right: 8px;
}

.emotion-0:focus,
.emotion-0:active {
  border-color: transparent;
  outline: none;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 40px;
  height: 40px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-3 span .wd-icon-fill,
.emotion-3 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-3:focus span .wd-icon-fill,
.emotion-3:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-3:hover:focus {
  background-color: #dfe2e6;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ced3d9;
}

.emotion-3:hover {
  background-color: #dfe2e6;
}

.emotion-3:hover span .wd-icon-fill,
.emotion-3:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-3:disabled span .wd-icon-fill,
.emotion-3:active:disabled span .wd-icon-fill,
.emotion-3:focus:disabled span .wd-icon-fill,
.emotion-3:hover:disabled span .wd-icon-fill,
.emotion-3:disabled span .wd-icon-accent,
.emotion-3:active:disabled span .wd-icon-accent,
.emotion-3:focus:disabled span .wd-icon-accent,
.emotion-3:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0;
  bottom: 0;
  left: 8px;
  margin: auto;
  border: 1px solid #b9c0c7;
  pointer-events: none;
  border-radius: 2px;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-4 {
  display: inline-block;
  position: absolute;
  left: 8px;
  top: 8px;
}

.emotion-4 svg {
  display: block;
}

.emotion-4 .wd-icon-fill {
  fill: #fff;
}

.emotion-4:hover .wd-icon-fill {
  fill: #fff;
}

.emotion-4 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-4 .wd-icon-background {
  fill: transparent;
}

.emotion-4:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-5"
>
  <input
    className="emotion-0"
    defaultValue=""
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="eg. #FFFFFF"
    type="text"
  />
  <div
    className="emotion-1"
    role="button"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <button
    className="emotion-3"
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M8.657 15.85l10.26-10.26a.49.49 0 0 1 .703.01l.7.7a.495.495 0 0 1 .01.704L9.005 18.33a.488.488 0 0 1-.692.002L8.3 18.32l-4.946-4.946a.495.495 0 0 1 .003-.711l.7-.7a.507.507 0 0 1 .711-.004l3.889 3.89z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <span
    className="emotion-4"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M8.657 15.85l10.26-10.26a.49.49 0 0 1 .703.01l.7.7a.495.495 0 0 1 .01.704L9.005 18.33a.488.488 0 0 1-.692.002L8.3 18.32l-4.946-4.946a.495.495 0 0 1 .003-.711l.7-.7a.507.507 0 0 1 .711-.004l3.889 3.89z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</div>
`;

exports[`CustomColorInput Snapshots renders with a selected color without # 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  position: relative;
}

.emotion-0 {
  margin: 0;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 36px;
  margin-right: 8px;
}

.emotion-0:focus,
.emotion-0:active {
  border-color: transparent;
  outline: none;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 40px;
  height: 40px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-3 span .wd-icon-fill,
.emotion-3 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-3:focus span .wd-icon-fill,
.emotion-3:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-3:hover:focus {
  background-color: #dfe2e6;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ced3d9;
}

.emotion-3:hover {
  background-color: #dfe2e6;
}

.emotion-3:hover span .wd-icon-fill,
.emotion-3:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-3:disabled span .wd-icon-fill,
.emotion-3:active:disabled span .wd-icon-fill,
.emotion-3:focus:disabled span .wd-icon-fill,
.emotion-3:hover:disabled span .wd-icon-fill,
.emotion-3:disabled span .wd-icon-accent,
.emotion-3:active:disabled span .wd-icon-accent,
.emotion-3:focus:disabled span .wd-icon-accent,
.emotion-3:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0;
  bottom: 0;
  left: 8px;
  margin: auto;
  border: 1px solid #b9c0c7;
  pointer-events: none;
  border-radius: 2px;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-4 {
  display: inline-block;
  position: absolute;
  left: 8px;
  top: 8px;
}

.emotion-4 svg {
  display: block;
}

.emotion-4 .wd-icon-fill {
  fill: #fff;
}

.emotion-4:hover .wd-icon-fill {
  fill: #fff;
}

.emotion-4 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-4 .wd-icon-background {
  fill: transparent;
}

.emotion-4:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-5"
>
  <input
    className="emotion-0"
    defaultValue=""
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="eg. #FFFFFF"
    type="text"
  />
  <div
    className="emotion-1"
    role="button"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <button
    className="emotion-3"
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M8.657 15.85l10.26-10.26a.49.49 0 0 1 .703.01l.7.7a.495.495 0 0 1 .01.704L9.005 18.33a.488.488 0 0 1-.692.002L8.3 18.32l-4.946-4.946a.495.495 0 0 1 .003-.711l.7-.7a.507.507 0 0 1 .711-.004l3.889 3.89z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <span
    className="emotion-4"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M8.657 15.85l10.26-10.26a.49.49 0 0 1 .703.01l.7.7a.495.495 0 0 1 .01.704L9.005 18.33a.488.488 0 0 1-.692.002L8.3 18.32l-4.946-4.946a.495.495 0 0 1 .003-.711l.7-.7a.507.507 0 0 1 .711-.004l3.889 3.89z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</div>
`;
